--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,5 +1,23 @@
 .home {
 
+  .header {
+
+    img {
+      
+    }
+
+    div {
+
+      h2 {
+
+      }
+
+      p {
+        
+      }
+    }
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
