--- a/less/index.less
+++ b/less/index.less
@@ -1,1 +1,10 @@
 // Follow the order in the readme
+
+@import "variables";
+@import "mixins";
+
+@import "reset";
+@import "global.less";
+@import "navigation.less";
+@import "footer.less";
+@import "home-page.less";
