--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,16 @@
 // Navigation Styles here
+
+.navigation {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+
+    h1{
+
+    }
+
+    a {
+      
+    }
+  }
