completed homepage less and navigation less files

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,19 +1,15 @@
 .home {
-
+  
+  
   .header {
+    padding-bottom: 2rem;
+    border-bottom: 2px dashed @navigation-border;
+    
 
-    img {
+    .welcome {
       
-    }
-
-    div {
-
       h2 {
-
-      }
-
-      p {
-        
+        padding-top: 2rem;
       }
     }
   }
