--- a/css/index.css
+++ b/css/index.css
@@ -168,11 +168,29 @@ img {
   width: 100%;
   margin: 0 auto;
 }
+.top-border {
+  width: 100%;
+  border-top: 2px dashed silver;
+}
 .navigation {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  padding-top: 2.5%;
+  padding-bottom: 2.5%;
+}
+.navigation h1 {
+  font-size: 5rem;
+}
+.navigation .navigation-items {
+  width: 40%;
+}
+.navigation .navigation-items a {
+  text-decoration: none;
+  font-size: 1.5rem;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 .footer {
   width: 100%;
@@ -184,6 +202,13 @@ img {
   color: #212529;
   font-size: 1.6rem;
   padding: 20px;
+}
+.home .header {
+  padding-bottom: 2rem;
+  border-bottom: 2px dashed #C0C0C0;
+}
+.home .header .welcome h2 {
+  padding-top: 2rem;
 }
 .home .content-section {
   margin: 30px 0;
