--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,12 +5,21 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
 
     h1{
-
+        font-size: 5rem;
     }
+    
+    .navigation-items{
+        width:40%;
 
-    a {
-      
+        a {
+            text-decoration: none;
+            font-size: 1.5rem;
+            margin-left: 5%;
+            margin-right: 5%;
+        }
     }
   }
