--- a/less/variables.less
+++ b/less/variables.less
@@ -12,3 +12,8 @@
 @shark: #212529;
 @eastern-blue: #17A2B8;
 @sandy-beach: #FFEBCD;
+@shallow-ocean: #008080;
+@ocean-ceiling: #00cece;
+
+//escaped variables
+@mobile: ~'(max-width: 500px)';
