--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,21 @@
 // Mixins in here
+
+.signUpButton(@bg-color, @size, @color: @white){
+    display: block;
+    width: 80%;
+    padding: 5%;
+    border-radius: 6px;
+    background: @bg-color;
+    font-size: @size;
+    color: @color;
+    text-align: center;
+
+    &:hover{
+        opacity: 0.7;
+    }
+
+}
+
+
+
+
