--- a/less/navigation.less
+++ b/less/navigation.less
@@ -8,16 +8,31 @@
     padding-top: 2.5%;
     padding-bottom: 2.5%;
 
+    @media @mobile {
+        display: flex;
+        flex-direction: column;
+        
+    }
+
     h1{
         font-size: 5rem;
     }
     
     .navigation-items{
         width:40%;
+        
+        @media @mobile {
+            display: flex;
+            justify-content: space-between;
+            align-content: center;
+            width:100%;
+            margin:2%;
+        }
 
         a {
             text-decoration: none;
             font-size: 1.5rem;
+            color: black;
             margin-left: 5%;
             margin-right: 5%;
         }
